--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <link href="https://renatoalmdev.github.io/calendar/style.css" />
 </head>
 <body>
   <div id="calendar">
