--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@
     <div id="calendar_weekdays"></div>
     <div id="calendar_content"></div>
   </div>
+  
+  <script src='https://renatoalmdev.github.io/calendar/scripts.js'></script>
 </body>
