--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+
 <head>
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <link href='https://renatoalmdev.github.io/calendar/style.css' rel='stylesheet'/>
@@ -11,3 +13,5 @@
   
   <script src='https://renatoalmdev.github.io/calendar/scripts.js'></script>
 </body>
+
+</html>
