--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="renatoalmdev.github.io/calendar/style.css" />
   </head>
   <body>
     <!-- partial:index.partial.html -->
